fixed up the .app and render with the right syntax

--- a/views/company.ejs
+++ b/views/company.ejs
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <%= companies_Name.forEach((i)) => { %>
-            <li> <%=i %></li>
-        <% }); %>
+   <=% name %>
 
-    </ul>
+
+
+
+
 </body>
 </html>
